--- a/main.html
+++ b/main.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Movie Detail Page</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <div class="container">
+    <img src="poster.jpg" alt="Movie Poster" class="moviePic">
+    <p class="movieDetail">Movie Description</p>
+  </div>
+  <script src="script.js"></script>
 </body>
-
 </html>
